plugins {
        id 'java'
        id 'org.springframework.boot' version '3.2.5'
        id 'io.spring.dependency-management' version '1.1.4'
        id 'jacoco'
        id 'com.diffplug.spotless' version '6.25.0'
}

group = 'org.fiuba'
version = '0.0.1-SNAPSHOT'

java {
        sourceCompatibility = '21'
}

repositories {
        mavenCentral()
}

dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-mail'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'com.google.firebase:firebase-admin:9.2.0'
        implementation 'com.cloudinary:cloudinary-http44:1.36.0'
        implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
        implementation 'com.bucket4j:bucket4j-core:8.10.1'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        runtimeOnly 'org.postgresql:postgresql'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

spotless {
    java {
        target 'src/**/*.java'
        eclipse().configFile(project.file('code_style.xml'))
        importOrder('java', 'javax', 'org', 'com', '')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

